--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,11 +7,13 @@ on:
     branches: [ main ]
 
 jobs:
-  release:
-    if: ${{ !github.event.pull_request.draft }}
-    name: Release
-    runs-on: self-hosted
-    timeout-minutes: 50
+  check-branch:
+    if: ${{ github.event_name == 'pull_request' }}
+    runs-on: ubuntu-latest
+    timeout-minutes: 10
+    concurrency:
+      group: check-pr-${{ github.ref }}
+      cancel-in-progress: true
 
     defaults:
       run:
