--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
 
       - uses: conda-incubator/setup-miniconda@v3
         with:
-          miniconda-version: "latest"dev
+          miniconda-version: "latest"
           environment-file: conda/release.yaml
           channels: conda-forge,nodefaults
           activate-environment: pydantic-to-django-model-release
