--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,6 +35,11 @@ jobs:
       - name: Create file with environment variables
         run: touch .env
 
+      - name: Check directory structure
+        run: |
+          pwd
+          ls -la
+
       - name: Install dependencies
         run: poetry install
 
