--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -7,13 +7,11 @@ on:
     branches: [ main ]
 
 jobs:
-  check-branch:
-    if: ${{ github.event_name == 'pull_request' }}
+  release:
+    if: ${{ !github.event.pull_request.draft }}
+    name: Release
     runs-on: ubuntu-latest
     timeout-minutes: 10
-    concurrency:
-      group: check-pr-${{ github.ref }}
-      cancel-in-progress: true
 
     defaults:
       run:
@@ -34,11 +32,6 @@ jobs:
 
       - name: Create file with environment variables
         run: touch .env
-
-      - name: Check directory structure
-        run: |
-          pwd
-          ls -la
 
       - name: Install dependencies
         run: poetry install
