--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -50,7 +50,7 @@ jobs:
           miniconda-version: "latest"
           environment-file: conda/dev.yaml
           channels: conda-forge,nodefaults
-          activate-environment: pydantic-to-django-model
+          activate-environment: pydantic-to-djmodel
           auto-update-conda: true
           conda-solver: libmamba
 
