--- a/mkdocs.yaml
+++ b/mkdocs.yaml
@@ -1,5 +1,5 @@
-site_name: pydantic-to-djmodel
-site_url: https://pydantic-to-djmodel.com
+site_name: pydantic-djmodel
+site_url: https://pydantic-djmodel.com
 repo_url: https://github.com/MYORG/MYREPO
 docs_dir: ./docs/
 site_dir: ./build/
@@ -113,7 +113,7 @@ markdown_extensions:
   - tables
   - toc
 extra:
-  project_name: "pydantic-to-djmodel"
+  project_name: "pydantic-djmodel"
   team:
     - name: "Active maintainers"
       members:
@@ -137,4 +137,4 @@ extra:
       icon: :material-cancel:{ .cancel }
       description: Unlikely to ever be supported or no upstream support.
 
-copyright: "Copyright &copy; 2022, pydantic-to-djmodel Team"
+copyright: "Copyright &copy; 2022, pydantic-djmodel Team"
